--- a/templates/commit.hbs
+++ b/templates/commit.hbs
@@ -1,5 +1,5 @@
-*{{#if scope}} **{{scope}}:**
-{{~/if}} {{#if subject}}
+{{#if scope}} {{scope}}:
+{{~/if}}{{#if subject}}
   {{~subject}}
 {{~else}}
   {{~header}}
