--- a/templates/header.hbs
+++ b/templates/header.hbs
@@ -1,13 +1,3 @@
-{{#if isPatch~}}
-  ###
-{{~else~}}
-  ##
-{{~/if}} {{#if @root.linkCompare~}}
-  [{{version}}]({{compareUrlFormat}})
-{{~else}}
-  {{~version}}
-{{~/if}}
-{{~#if title}} "{{title}}"
-{{~/if}}
-{{~#if date}} ({{date}})
-{{/if}}
+---------------------------------------------------------------------------------------------------
+Version: {{version}}
+{{#if date~}} Date: {{date}}{{/if~}}
