--- a/templates/template.hbs
+++ b/templates/template.hbs
@@ -1,23 +1,19 @@
 {{> header}}
-
 {{#if noteGroups}}
-{{#each noteGroups}}
+{{#each noteGroups~}}
 
-### ⚠ {{title}}
-
+  {{title}}:
 {{#each notes}}
-* {{#if commit.scope}}**{{commit.scope}}:** {{/if}}{{text}}
+    - {{#if commit.scope}}**{{commit.scope}}:** {{/if}}{{text}}
 {{/each}}
 {{/each}}
 {{/if}}
 {{#each commitGroups}}
-
 {{#if title}}
-### {{title}}
-
+  {{title}}:
 {{/if}}
 {{#each commits}}
-{{> commit root=@root}}
+    - {{> commit root=@root}}
 {{/each}}
 
 {{/each}}
