fix: space after date

--- a/templates/header.hbs
+++ b/templates/header.hbs
@@ -1,3 +1,3 @@
 ---------------------------------------------------------------------------------------------------
 Version: {{version}}
-{{#if date~}} Date: {{date}}{{/if~}}
+{{#if date~}} Date: {{date}}{{/if}}
